--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
         <meta name="author" content="@immatthamlin">
         <meta name="description" content="KYMA">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/tachyons.min.css">
+        <link rel="stylesheet" href="./node_modules/tachyons/css/tachyons.min.css">
+        <link rel="stylesheet" href="./assets/css/base.css">
     </head>
 
     <body class="wi-100 sans-serif">
-        <header style="background-image: url(/examples/img/1.jpg); background-position: bottom center;" class="h-100 dt bg-cv">
+        <header style="background-image: url(./assets/images/hot-air-balloon.jpeg); background-position: bottom center;" class="h-100 dt bg-cv">
             <div class="dtc v-mid  bg-black-10 white-80 tl tc-ns phm">
-                <h1 class="f3 f1-m mega-l ttu tracked-mega mbm mtn semibold">Project Title</h1>
-                <h2 class="f4 f3-ns book mbm mtn">A Project Subtitle as Elevator Pitch</h2>
-                <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam">Call to Action</a>
-                <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam">Secondary Call to Action</a>
+                <img class="" src="./assets/images/logo-white-transparent-medium.png"/>
+                <h1 class="f3 f1-m mega-l ttu tracked-mega mbm mtn semibold">KYMA</h1>
+                <h2 class="f4 f3-ns book mbm mtn">International Business Development</h2>
+                <br/>
+                <a href="#about" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam">Learn More</a>
+                <!-- <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam">Secondary Call to Action</a> -->
             </div>
         </header>
-        <main>
+        <main id="about" class="h-100">
             <div class="measure center pvl">
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title">Simple full screen panel header</h1>
 
@@ -32,7 +35,7 @@
                 <p class="measure lh-copy">Subtitle is optional.</p>
             </div>
         </main>
-        <script>
+        <!-- <script>
             (function(i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
                 i[r] = i[r] || function() {
@@ -47,7 +50,7 @@
 
             ga('create', 'UA-55773803-1', 'auto');
             ga('send', 'pageview');
-        </script>
+        </script> -->
     </body>
 
 </html>
