adding a floating kyma link

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <p class="measure lh-copy">Subtitle is optional.</p>
             </div>
         </main>
+        <aside class="logo-left-corner">
+            <a class="" href="./index.html"><img class="" src="./assets/images/logo-transparent-smallest.png"/></a>
+        </aside>
         <!-- <script>
             (function(i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
