horizontal rules 4lyfe

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </header>
         <main class="h-100">
             <section id="about">
-                <div class="measure center pvl">
+                <div class="measure center pvl phm">
                     <h1 class="f4 f2-ns semibold ttu tracked lh-title">Simple full screen panel header</h1>
-
+                    <hr/>
                     <p class="measure lh-copy">Vertically aligns content within the panel which is set to fill height and width of the window.</p>
                     <p class="measure lh-copy">Can be used with a solid background color, a gradient background, or a custom background image (as shown here).</p>
                     <p class="measure lh-copy">Designed to handle zero, one or two call to action buttons.</p>
@@ -43,9 +43,18 @@
             </section>
         </main>
         <section class="h-100" id="contact">
-            <div class="measure center v-mid tl tc-ns phm">
+            <div class="measure center tl tc-ns phm">
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title">Contact Us:</h1>
-                <form>
+                <hr/>
+                <div class="contact-details">
+                    <h3 class="f4 f2-ns semibold ttu tracked lh-title">Neil Hamlin</h3>
+                    <a class="contact-personal-tel link" href="+14254180628">+1 425-418-0628</a>
+                    <br/>
+                    <br/>
+                    <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
+                </div>
+                <hr/>
+                <form class="v-mid">
                     <div class="row">
                         <div class="six columns">
                             <label for="exampleEmailInput">Your email:</label>
@@ -67,7 +76,7 @@
             </div>
         </section>
         <footer class="h-25" id="footer">
-            <div class="measure center pvl cf">
+            <div class="measure center pvl cf phm">
                 <p class="fl">
                     &copy; 2016
                 </p>
