--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./assets/css/skeleton/skeleton.css">
         <link rel="stylesheet" href="./node_modules/tachyons/css/tachyons.min.css">
-        <!-- <link rel="stylesheet" href="./assets/css/skeleton/skeleton.css"> -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="./assets/css/base.css">
     </head>
 
@@ -46,12 +46,21 @@
             <div class="measure center tl tc-ns phm">
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title">Contact Us:</h1>
                 <hr/>
-                <div class="contact-details">
-                    <h3 class="f4 f2-ns semibold ttu tracked lh-title">Neil Hamlin</h3>
-                    <a class="contact-personal-tel link" href="+14254180628">+1 425-418-0628</a>
+                <h3 class="f4 f2-ns semibold ttu tracked lh-title">Neil Hamlin</h3>
+                <div class="contact-details tal">
+                    <i class="fa fa-phone"></i> <a class="contact-personal-tel link" href="+14254180628">+1 425-418-0628</a>
                     <br/>
                     <br/>
-                    <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
+                    <i class="fa fa-envelope"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
+                    <br/>
+                    <br/>
+                    <i class="fa fa-skype"></i> <a class="link" href="skype:hamlinn?userinfo">hamlinn</a>
+                    <br/>
+                    <br/>
+                    <i class="fa fa-twitter"></i> <a class="link" href="https://twitter.com/hamlinn">@hamlinn</a>
+                    <br/>
+                    <br/>
+                    <i class="fa fa-linkedin"></i> <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
                 </div>
                 <hr/>
                 <form class="v-mid">
