--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <i class="fa fa-skype"></i> <a class="link" href="skype:hamlinn?userinfo">hamlinn</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-twitter"></i> <a class="link" href="https://twitter.com/hamlinn">@hamlinn</a>
+                    <i class="fa fa-twitter"></i> <a class="link" href="https://twitter.com/cf_intelligence">@cf_intelligence</a>
                     <br/>
                     <br/>
                     <i class="fa fa-linkedin"></i> <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
