--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <hr/>
                 <h3 class="f4 f2-ns semibold ttu tracked lh-title">Neil Hamlin</h3>
                 <div class="contact-details tal">
-                    <i class="fa fa-phone"></i> <a class="contact-personal-tel link" href="+14254180628">+1 425-418-0628</a>
+                    <i class="fa fa-phone"></i> <a class="contact-personal-tel link" href="tel:+14254180628">+1 425-418-0628</a>
                     <br/>
                     <br/>
                     <i class="fa fa-envelope"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
