change to gradient over image
faster load times

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <aside class="logo-left-corner">
             <a class="" href="./index.html"><img class="" src="./assets/images/logo-transparent-smallest.png"/></a>
         </aside>
-        <header style="background-image: url(./assets/images/hot-air-balloon.jpeg); background-position: bottom center;" class="h-100 dt bg-cv">
+        <header style="background-image: linear-gradient(-45deg, #0074D9, #7FDBFF);" class="h-100 dt bg-cv">
+        <!-- <header style="background-image: url(./assets/images/hot-air-balloon.jpeg); background-position: bottom center;" class="h-100 dt bg-cv"> -->
             <div class="dtc v-mid  bg-black-10 white-80 tl tc-ns phm">
                 <img class="push-up" src="./assets/images/logo-white-transparent-medium.png"/>
                 <h1 class="f3 f1-m mega-l ttu tracked-mega mbm mtn semibold">KYMA</h1>
