--- a/thanks.html
+++ b/thanks.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <title>
-            KYMA
+            THANKS
         </title>
         <meta name="author" content="@immatthamlin">
         <meta name="description" content="KYMA">
