--- a/thanks.html
+++ b/thanks.html
@@ -24,7 +24,7 @@
         <aside class="logo-left-corner">
             <a class="" href="./index.html"><img class="" src="./assets/images/logo-transparent-smallest.png"/></a>
         </aside>
-        <header style="background-image: linear-gradient(-45deg, #0074D9, #7FDBFF);" class="h-100 dt bg-cv">
+        <header style="background-image: linear-gradient(-45deg, #2ECC40, #7FDBFF);" class="h-100 dt bg-cv">
         <!-- <header style="background-image: url(./assets/images/hot-air-balloon.jpeg); background-position: bottom center;" class="h-100 dt bg-cv"> -->
             <div class="dtc v-mid  bg-black-10 white-80 tl tc-ns phm">
                 <img class="push-up" src="./assets/images/logo-white-transparent-medium.png"/>
@@ -68,26 +68,7 @@
                     <i class="fa fa-linkedin"></i> <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
                 </div>
                 <hr/>
-                <form class="v-mid" action="http://formspree.io/kyma.intl@outlook.com">
-                    <div class="row">
-                        <div class="six columns">
-                            <label for="exampleEmailInput">Your email:</label>
-                            <input name="_replyto" class="u-full-width contact-input--ma1 contact-input--mb1" type="email" placeholder="test@mailbox.com" id="contactEmailInput">
-                        </div>
-                        <div class="six columns">
-                            <label for="name">Name:</label>
-                            <input class="u-full-width contact-input--ma1 contact-input--mb1" type="text" placeholder="Name" id="contactNameInput">
-                        </div>
-                    </div>
-                    <label for="exampleMessage">Message:</label>
-                    <textarea class="u-full-width contact-input--ma1 contact-input--mb1" placeholder="Hi Dave …" id="contactMessage"></textarea>
-                    <label class="example-send-yourself-copy contact-input--mb1">
-                        <input type="checkbox" id="send-yourself-a-copy">
-                        <span class="label-body">Send a copy to yourself</span>
-                    </label>
-                    <input type="hidden" name="_next" value="http://goexploring.today/kyma/thanks.html" />
-                    <input type="submit" id="contact-submit" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--black-40 black-80 link pam hover-link" value="Send" />
-                </form>
+                <h1 class="f4 f2-ns semibold ttu tracked lh-title v-mid">Submitted!</h1>
             </div>
         </section>
         <footer class="h-25" id="footer">
