--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </div>
                         <div class="six columns">
                             <label for="name">Name:</label>
-                            <input class="u-full-width contact-input--ma1 contact-input--mb1" type="text" placeholder="Name" id="contactNameInput">
+                            <input name="Name" class="u-full-width contact-input--ma1 contact-input--mb1" type="text" placeholder="Name" id="contactNameInput">
                         </div>
                     </div>
                     <label for="exampleMessage">Message:</label>
