--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     <i class="fa fa-phone"></i> <a class="contact-personal-tel link" href="tel:+14254180628">+1 425-418-0628</a>
                     <br/>
                     <br/>
+                    <i class="fa fa-"
                     <i class="fa fa-envelope"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
                     <br/>
                     <br/>
@@ -74,14 +75,15 @@
                             <label for="exampleEmailInput">Your email:</label>
                             <input name="_replyto" class="u-full-width contact-input--ma1 contact-input--mb1" type="email" placeholder="test@mailbox.com" id="contactEmailInput">
                         </div>
-                        <div class="six columns">
+                        <!-- <div class="six columns">
                             <label for="name">Name:</label>
                             <input name="Name" class="u-full-width contact-input--ma1 contact-input--mb1" type="text" placeholder="Name" id="contactNameInput">
-                        </div>
+                        </div> -->
                     </div>
                     <label for="exampleMessage">Message:</label>
-                    <textarea name="message" class="u-full-width contact-input--ma1 contact-input--mb1" placeholder="Hi Dave …" id="contactMessage"></textarea>
+                    <textarea name="message" class="u-full-width contact-input--ma1 contact-input--mb1" placeholder="Hi Neil … (Please enter your phone number here and don't forget to leave your name!)" id="contactMessage"></textarea>
                     <input type="hidden" name="_next" value="http://goexploring.today/kyma/thanks.html#contact" />
+                    <input type="hidden" name="_subject" value="KYMA Form Submission!" />
                     <input type="submit" id="contact-submit" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--black-40 black-80 link pam hover-link" value="Send" />
                 </form>
             </div>
