bigger icons, fixed form

--- a/thanks.html
+++ b/thanks.html
@@ -53,19 +53,22 @@
                 <hr/>
                 <h3 class="f4 f2-ns semibold ttu tracked lh-title">Neil Hamlin</h3>
                 <div class="contact-details tal">
-                    <i class="fa fa-phone"></i> <a class="contact-personal-tel link" href="tel:+14254180628">+1 425-418-0628</a>
+                    <i class="fa fa-phone f2"></i> <a class="contact-personal-tel link" href="tel:+14254180628">Call Me</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-envelope"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
+                    <i class="fa fa-comment-o f2"></i> <a class="contact-personal-sms link" href="sms:+14254180628?body=Hello+Neil!">Text Me</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-skype"></i> <a class="link" href="skype:hamlinn?userinfo">hamlinn</a>
+                    <i class="fa fa-envelope f2"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-twitter"></i> <a class="link" href="https://twitter.com/cf_intelligence">@cf_intelligence</a>
+                    <i class="fa fa-skype f2"></i> <a class="link" href="skype:hamlinn?userinfo">hamlinn</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-linkedin"></i> <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
+                    <i class="fa fa-twitter f2"></i> <a class="link" href="https://twitter.com/cf_intelligence">@cf_intelligence</a>
+                    <br/>
+                    <br/>
+                    <i class="fa fa-linkedin f2"></i> <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
                 </div>
                 <hr/>
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title v-mid">Submitted!</h1>
