--- a/index.html
+++ b/index.html
@@ -53,32 +53,30 @@
                 <hr/>
                 <h3 class="f4 f2-ns semibold ttu tracked lh-title">Neil Hamlin</h3>
                 <div class="contact-details tal">
-                    <i class="fa fa-phone"></i> <a class="contact-personal-tel link" href="tel:+14254180628">+1 425-418-0628</a>
+                    <i class="fa fa-phone f2"></i> <a class="contact-personal-tel link" href="tel:+14254180628">Call Me</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-"
-                    <i class="fa fa-envelope"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
+                    <i class="fa fa-comment-o f2"></i> <a class="contact-personal-sms link" href="sms:+14254180628?body=Hello+Neil!">Text Me</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-skype"></i> <a class="link" href="skype:hamlinn?userinfo">hamlinn</a>
+                    <i class="fa fa-envelope f2"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-twitter"></i> <a class="link" href="https://twitter.com/cf_intelligence">@cf_intelligence</a>
+                    <i class="fa fa-skype f2"></i> <a class="link" href="skype:hamlinn?userinfo">hamlinn</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-linkedin"></i> <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
+                    <i class="fa fa-twitter f2"></i> <a class="link" href="https://twitter.com/cf_intelligence">@cf_intelligence</a>
+                    <br/>
+                    <br/>
+                    <i class="fa fa-linkedin f2"></i> <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
                 </div>
                 <hr/>
                 <form class="v-mid" action="http://formspree.io/kyma.intl@outlook.com" method="POST">
                     <div class="row">
-                        <div class="six columns">
+                        <div class="twelve columns">
                             <label for="exampleEmailInput">Your email:</label>
                             <input name="_replyto" class="u-full-width contact-input--ma1 contact-input--mb1" type="email" placeholder="test@mailbox.com" id="contactEmailInput">
                         </div>
-                        <!-- <div class="six columns">
-                            <label for="name">Name:</label>
-                            <input name="Name" class="u-full-width contact-input--ma1 contact-input--mb1" type="text" placeholder="Name" id="contactNameInput">
-                        </div> -->
                     </div>
                     <label for="exampleMessage">Message:</label>
                     <textarea name="message" class="u-full-width contact-input--ma1 contact-input--mb1" placeholder="Hi Neil … (Please enter your phone number here and don't forget to leave your name!)" id="contactMessage"></textarea>
