--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
             </section>
         </main>
-        <section class="h-100" id="contact">
+        <section class="" id="contact">
             <div class="measure center tl tc-ns phm">
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title">Contact Us:</h1>
                 <hr/>
@@ -56,7 +56,7 @@
                     <i class="fa fa-phone f2"></i> <a class="contact-personal-tel link" href="tel:+14254180628">Call Me</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-comment-o f2"></i> <a class="contact-personal-sms link" href="sms:+14254180628?body=Hello+Neil!">Text Me</a>
+                    <i class="fa fa-comment-o f2"></i> <a class="contact-personal-sms link" href="sms:+14254180628">Text Me</a>
                     <br/>
                     <br/>
                     <i class="fa fa-envelope f2"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
@@ -84,9 +84,10 @@
                     <input type="hidden" name="_subject" value="KYMA Form Submission!" />
                     <input type="submit" id="contact-submit" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--black-40 black-80 link pam hover-link" value="Send" />
                 </form>
+                <div class="spacer-small"></div>
             </div>
         </section>
-        <footer class="h-25" id="footer">
+        <footer class="h-25 dt bg-cv" id="footer" style="background-image: linear-gradient(-45deg, #0074D9, #7FDBFF);">
             <div class="measure center pvl cf phm">
                 <p class="fl">
                     &copy; 2016
