--- a/thanks.html
+++ b/thanks.html
@@ -47,16 +47,16 @@
                 </div>
             </section>
         </main>
-        <section class="h-100" id="contact">
+        <section class="" id="contact">
             <div class="measure center tl tc-ns phm">
-                <h1 class="f4 f2-ns semibold ttu tracked lh-title">Contact Us:</h1>
+                <h1 class="f4 f2-ns semibold ttu tracked lh-title">Contact Me:</h1>
                 <hr/>
                 <h3 class="f4 f2-ns semibold ttu tracked lh-title">Neil Hamlin</h3>
                 <div class="contact-details tal">
                     <i class="fa fa-phone f2"></i> <a class="contact-personal-tel link" href="tel:+14254180628">Call Me</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-comment-o f2"></i> <a class="contact-personal-sms link" href="sms:+14254180628?body=Hello+Neil!">Text Me</a>
+                    <i class="fa fa-comment-o f2"></i> <a class="contact-personal-sms link" href="sms:+14254180628">Text Me</a>
                     <br/>
                     <br/>
                     <i class="fa fa-envelope f2"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
@@ -72,9 +72,10 @@
                 </div>
                 <hr/>
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title v-mid">Submitted!</h1>
+                <div class="spacer-small"></div>
             </div>
         </section>
-        <footer class="h-25" id="footer">
+        <footer class="h-25 dt bg-cv" id="footer" style="background-image: linear-gradient(-45deg, #2ECC40, #7FDBFF);">
             <div class="measure center pvl cf phm">
                 <p class="fl">
                     &copy; 2016
