--- a/index.html
+++ b/index.html
@@ -57,10 +57,45 @@
                 <div class="measure center pvl phm">
                     <h1 class="f4 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
                     <hr/>
-                    <p class="measure lh-copy">Vertically aligns content within the panel which is set to fill height and width of the window.</p>
-                    <p class="measure lh-copy">Can be used with a solid background color, a gradient background, or a custom background image (as shown here).</p>
-                    <p class="measure lh-copy">Designed to handle zero, one or two call to action buttons.</p>
-                    <p class="measure lh-copy">Subtitle is optional.</p>
+                    <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market research to successful product launch.</p>
+                    <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving consumer problems.</p>
+                    <hr/>
+                    <div class="fl w-100 mvxxl">
+                        <div class="step tc">
+                            <span class="mega encircled">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
+                            <p>
+                                Lorem Ipsum
+                            </p>
+                        </div>
+                        <div class="arrow tc">
+                            <span class="mega"><i class="fa fa-arrow-down"></i></span>
+                        </div>
+                        <div class="step tc">
+                            <span class="mega encircled">2</span><h1 class="f1 tracked ttu">Pursue and Connect with Target Market</h1>
+                            <p>
+                                Lorem Ipsum
+                            </p>
+                        </div>
+                        <div class="arrow tc">
+                            <span class="mega"><i class="fa fa-arrow-down"></i></span>
+                        </div>
+                        <div class="step tc">
+                            <span class="mega encircled">3</span><h1 class="f1 tracked ttu">Process and Solve Customer Needs</h1>
+                            <p>
+                                Lorem Ipsum
+                            </p>
+                        </div>
+                        <div class="arrow tc">
+                            <span class="mega"><i class="fa fa-arrow-down"></i></span>
+                        </div>
+                        <div class="step tc ">
+                            <span class="mega encircled">4</span><h1 class="f1 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
+                            <p>
+                                Lorem Ipsum
+                            </p>
+                        </div>
+                    </div>
+                    <hr/>
                 </div>
             </section>
         </main>
