--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="step tc">
                             <span class="mega encircled">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
                             <p>
-                                Lorem Ipsum
+                                KYMA Internations excels in seeking and identifying new and growing markets as well as identifying key competitors within existing markets.
                             </p>
                         </div>
                         <div class="arrow tc">
@@ -73,7 +73,7 @@
                         <div class="step tc">
                             <span class="mega encircled">2</span><h1 class="f1 tracked ttu">Pursue and Connect with Target Market</h1>
                             <p>
-                                Lorem Ipsum
+                                Specialising in connecting with and reaching out to potential customers as well as building lasting relationships with the complete supply chain
                             </p>
                         </div>
                         <div class="arrow tc">
