--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <div class="step tc">
                             <span class="mega encircled">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
                             <p>
-                                KYMA Internations excels in seeking and identifying new and growing markets as well as identifying key competitors within existing markets.
+                                KYMA International excels in seeking and identifying new and growing markets as well as identifying key competitors within existing markets.
                             </p>
                         </div>
                         <div class="arrow tc">
@@ -82,7 +82,7 @@
                         <div class="step tc">
                             <span class="mega encircled">3</span><h1 class="f1 tracked ttu">Process and Solve Customer Needs</h1>
                             <p>
-                                Lorem Ipsum
+                                Identify needs and wants of customers to develop complete products, manufacturing, and management processes that deliver value to customers.
                             </p>
                         </div>
                         <div class="arrow tc">
@@ -91,7 +91,7 @@
                         <div class="step tc ">
                             <span class="mega encircled">4</span><h1 class="f1 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
                             <p>
-                                Lorem Ipsum
+                                Collect customer feedback and iterate with product teams to perfect the experience for current and future customers.
                             </p>
                         </div>
                     </div>
