add a centering class

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </main>
         <section class="" id="contact">
             <div class="measure center tl tc-ns phm">
-                <h1 class="f4 f2-ns semibold ttu tracked lh-title">Contact Us:</h1>
+                <h1 class="f4 f2-ns semibold ttu tracked lh-title tc">Contact Us:</h1>
                 <hr/>
                 <h3 class="f4 f2-ns semibold ttu tracked lh-title">Neil Hamlin</h3>
                 <div class="contact-details tal">
