making some changes

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="measure center pvl phm">
                     <h1 class="f4 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
                     <hr/>
-                    <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market research to successful product launch.</p>
+                    <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market intelligence to successful project management.</p>
                     <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving consumer problems.</p>
                     <hr/>
                     <div class="fl w-100 mvxxl">
