--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <img class="push-up" src="./assets/images/logo-white-transparent-medium.png"/>
                 <h1 class="f3 f1-m mega-l ttu tracked-mega mbm mtn semibold">KYMA</h1>
                 <h2 class="f4 f3-ns book mbm mtn">International Business Development</h2>
+                <h3 class="f5 f4-ns book mbm mtn">Bringing solutions to those that need them, across international boundaries.</h3>
                 <br/>
                 <a href="#about" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam hover-link">Learn More</a>
                 <!-- <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Secondary Call to Action</a> -->
@@ -54,15 +55,37 @@
         </header>
         <main class="h-100">
             <section id="about">
-                <div class="measure center pvl phm">
-                    <h1 class="f4 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
-                    <hr/>
-                    <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market intelligence to successful project management.</p>
-                    <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving customer problems.</p>
+                <div class="measure center pvl phm cf">
+                    <div class="fl">
+                        <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
+                        <hr/>
+                        <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market intelligence to successful project management.</p>
+                        <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving customer problems.</p>
+                    </div>
+                    <div class="fr">
+                        <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Sector Expertise:</h1>
+                        <ul>
+                            <li>
+                                Commercial Marine Industry
+                            </li>
+                            <li>
+                                Superyacht Industry (50m +)
+                            </li>
+                            <li>
+                                Glass and Glazing Technologies
+                            </li>
+                            <li>
+                                Custom Metal Manufacturing
+                            </li>
+                            <li>
+                                Advanced Composites Technology
+                            </li>
+                        </ul>
+                    </div>
                     <hr/>
                     <div class="fl w-100 mvxxl">
                         <div class="step tc">
-                            <span class="mega encircled">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
+                            <span class="encircled">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
                             <p>
                                 KYMA International excels in seeking and identifying new and growing markets as well as identifying key competitors within existing markets.
                             </p>
@@ -71,7 +94,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="mega encircled">2</span><h1 class="f1 tracked ttu">Pursue and Connect with Target Market</h1>
+                            <span class="encircled">2</span><h1 class="f1 tracked ttu">Pursue and Connect with Target Market</h1>
                             <p>
                                 Specialising in connecting with and reaching out to potential customers as well as building lasting relationships with the complete supply chain
                             </p>
@@ -80,7 +103,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="mega encircled">3</span><h1 class="f1 tracked ttu">Process and Solve Customer Needs</h1>
+                            <span class="encircled">3</span><h1 class="f1 tracked ttu">Process and Solve Customer Needs</h1>
                             <p>
                                 Identify needs and wants of customers to develop complete products, manufacturing, and management processes that deliver value to customers.
                             </p>
@@ -89,7 +112,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc ">
-                            <span class="mega encircled">4</span><h1 class="f1 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
+                            <span class="encircled">4</span><h1 class="f1 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
                             <p>
                                 Collect customer feedback and iterate with product teams to perfect the experience for current and future customers.
                             </p>
