--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img class="push-up" src="./assets/images/logo-white-transparent-medium.png"/>
                 <h1 class="f3 f1-m mega-l ttu tracked-mega mbm mtn semibold">KYMA</h1>
                 <h2 class="f4 f3-ns book mbm mtn">International Business Development</h2>
-                <h3 class="f5 f4-ns book mbm mtn">Bringing solutions to those that need them, across international boundaries.</h3>
+                <!-- <h3 class="f5 f4-ns book mbm mtn">Bringing solutions to those that need them, across international boundaries.</h3> -->
                 <br/>
                 <a href="#about" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam hover-link">Learn More</a>
                 <!-- <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Secondary Call to Action</a> -->
