--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- <header style="background-image: url(./assets/images/hot-air-balloon.jpeg); background-position: bottom center;" class="h-100 dt bg-cv"> -->
             <div class="dtc v-mid  bg-black-10 white-80 tl tc-ns phm">
                 <img class="push-up" src="./assets/images/logo-white-transparent-medium.png"/>
-                <h1 class="f3 f1-m mega-l ttu tracked-mega mbm mtn semibold">KYMA</h1>
+                <!-- <h1 class="f3 f1-m mega-l ttu tracked-mega mbm mtn semibold">KYMA</h1> -->
                 <h2 class="f4 f3-ns book mbm mtn">International Business Development</h2>
                 <!-- <h3 class="f5 f4-ns book mbm mtn">Bringing solutions to those that need them, across international boundaries.</h3> -->
                 <br/>
