--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         </header>
         <main class="h-100">
             <section id="about">
-                <div class="measure center pvl phm cf">
-                    <div class="fl">
+                <div class="measure center pvl phm ">
+                    <div class="">
                         <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
                         <hr/>
                         <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market intelligence to successful project management.</p>
                         <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving customer problems.</p>
                     </div>
-                    <div class="fr">
+                    <div class="">
                         <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Sector Expertise:</h1>
                         <ul>
                             <li>
@@ -134,7 +134,7 @@
                     <i class="fa fa-comment-o f2"></i> <a class="contact-personal-sms link" href="sms:+14254180628">Text Me</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-envelope f2"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
+                    <i class="fa fa-envelope f2"></i> <a class="contact-personal-email link" href="mailto:neil@kymainternationalcom">neil@kymainternational.com</a>
                     <br/>
                     <br/>
                     <i class="fa fa-skype f2"></i> <a class="link" href="skype:hamlinn?userinfo">hamlinn</a>
@@ -146,7 +146,7 @@
                     <i class="fa fa-linkedin f2"></i> <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
                 </div>
                 <hr/>
-                <form class="v-mid" action="http://formspree.io/kyma.intl@outlook.com" method="POST">
+                <form class="v-mid" action="http://formspree.io/neil@kymainternational.com" method="POST">
                     <div class="row">
                         <div class="twelve columns">
                             <label for="exampleEmailInput">Your email:</label>
