--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <hr/>
                     <div class="fl w-100 mvxxl">
                         <div class="step tc">
-                            <span class="encircled">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
+                            <span class="mega">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
                             <p>
                                 KYMA International excels in seeking and identifying new and growing markets as well as identifying key competitors within existing markets.
                             </p>
@@ -94,7 +94,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="encircled">2</span><h1 class="f1 tracked ttu">Pursue and Connect with Target Market</h1>
+                            <span class="mega">2</span><h1 class="f1 tracked ttu">Pursue and Connect with Target Market</h1>
                             <p>
                                 Specialising in connecting with and reaching out to potential customers as well as building lasting relationships with the complete supply chain
                             </p>
@@ -103,7 +103,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="encircled">3</span><h1 class="f1 tracked ttu">Process and Solve Customer Needs</h1>
+                            <span class="mega">3</span><h1 class="f1 tracked ttu">Process and Solve Customer Needs</h1>
                             <p>
                                 Identify needs and wants of customers to develop complete products, manufacturing, and management processes that deliver value to customers.
                             </p>
@@ -112,7 +112,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc ">
-                            <span class="encircled">4</span><h1 class="f1 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
+                            <span class="mega">4</span><h1 class="f1 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
                             <p>
                                 Collect customer feedback and iterate with product teams to perfect the experience for current and future customers.
                             </p>
