adding call to action and google analytics

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <!-- <h3 class="f5 f4-ns book mbm mtn">Bringing solutions to those that need them, across international boundaries.</h3> -->
                 <br/>
                 <a href="#about" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam hover-link">Learn More</a>
+                <a href="#contact" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Contact Us</a>
                 <!-- <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Secondary Call to Action</a> -->
             </div>
         </header>
@@ -173,7 +174,7 @@
                 </p>
             </div>
         </footer>
-        <!-- <script>
+        <script>
             (function(i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
                 i[r] = i[r] || function() {
@@ -186,9 +187,9 @@
                 m.parentNode.insertBefore(a, m)
             })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-55773803-1', 'auto');
+            ga('create', 'UA-73126302-1', 'auto');
             ga('send', 'pageview');
-        </script> -->
+        </script>
     </body>
 
 </html>
