--- a/thanks.html
+++ b/thanks.html
@@ -45,22 +45,79 @@
         <!-- <header style="background-image: url(./assets/images/hot-air-balloon.jpeg); background-position: bottom center;" class="h-100 dt bg-cv"> -->
             <div class="dtc v-mid  bg-black-10 white-80 tl tc-ns phm">
                 <img class="push-up" src="./assets/images/logo-white-transparent-medium.png"/>
-                <h1 class="f3 f1-m mega-l ttu tracked-mega mbm mtn semibold">KYMA</h1>
+                <!-- <h1 class="f3 f1-m mega-l ttu tracked-mega mbm mtn semibold">KYMA</h1> -->
                 <h2 class="f4 f3-ns book mbm mtn">International Business Development</h2>
                 <br/>
                 <a href="#about" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam hover-link">Learn More</a>
-                <!-- <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Secondary Call to Action</a> -->
+                <a href="#contact" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Contact Us</a>
             </div>
         </header>
         <main class="h-100">
             <section id="about">
                 <div class="measure center pvl phm">
-                    <h1 class="f4 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
+                    <div class="">
+                        <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
+                        <hr/>
+                        <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market intelligence to successful project management.</p>
+                        <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving customer problems.</p>
+                    </div>
+                    <div class="">
+                        <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Sector Expertise:</h1>
+                        <hr/>
+                        <ul>
+                            <li>
+                                Commercial Marine Industry
+                            </li>
+                            <li>
+                                Superyacht Industry (50m +)
+                            </li>
+                            <li>
+                                Glass and Glazing Technologies
+                            </li>
+                            <li>
+                                Custom Metal Manufacturing
+                            </li>
+                            <li>
+                                Advanced Composites Technology
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="fl w-100 mvxxl">
+                        <div class="step tc">
+                            <span class="mega">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
+                            <p>
+                                KYMA International excels in seeking and identifying new and growing markets as well as identifying key competitors within existing markets.
+                            </p>
+                        </div>
+                        <div class="arrow tc">
+                            <span class="mega"><i class="fa fa-arrow-down"></i></span>
+                        </div>
+                        <div class="step tc">
+                            <span class="mega">2</span><h1 class="f1 tracked ttu">Pursue and Connect with Target Market</h1>
+                            <p>
+                                Specialising in connecting with and reaching out to potential customers as well as building lasting relationships with the complete supply chain
+                            </p>
+                        </div>
+                        <div class="arrow tc">
+                            <span class="mega"><i class="fa fa-arrow-down"></i></span>
+                        </div>
+                        <div class="step tc">
+                            <span class="mega">3</span><h1 class="f1 tracked ttu">Process and Solve Customer Needs</h1>
+                            <p>
+                                Identify needs and wants of customers to develop complete products, manufacturing, and management processes that deliver value to customers.
+                            </p>
+                        </div>
+                        <div class="arrow tc">
+                            <span class="mega"><i class="fa fa-arrow-down"></i></span>
+                        </div>
+                        <div class="step tc ">
+                            <span class="mega">4</span><h1 class="f1 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
+                            <p>
+                                Collect customer feedback and iterate with product teams to perfect the experience for current and future customers.
+                            </p>
+                        </div>
+                    </div>
                     <hr/>
-                    <p class="measure lh-copy">Vertically aligns content within the panel which is set to fill height and width of the window.</p>
-                    <p class="measure lh-copy">Can be used with a solid background color, a gradient background, or a custom background image (as shown here).</p>
-                    <p class="measure lh-copy">Designed to handle zero, one or two call to action buttons.</p>
-                    <p class="measure lh-copy">Subtitle is optional.</p>
                 </div>
             </section>
         </main>
@@ -76,7 +133,7 @@
                     <i class="fa fa-comment-o f2"></i> <a class="contact-personal-sms link" href="sms:+14254180628">Text Me</a>
                     <br/>
                     <br/>
-                    <i class="fa fa-envelope f2"></i> <a class="contact-personal-email link" href="mailto:kyma.intl@outlook.com">kyma.intl@outlook.com</a>
+                    <i class="fa fa-envelope f2"></i> <a class="contact-personal-email link" href="mailto:neil@kymainternationalcom">neil@kymainternational.com</a>
                     <br/>
                     <br/>
                     <i class="fa fa-skype f2"></i> <a class="link" href="skype:hamlinn?userinfo">hamlinn</a>
@@ -102,7 +159,7 @@
                 </p>
             </div>
         </footer>
-        <!-- <script>
+        <script>
             (function(i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
                 i[r] = i[r] || function() {
@@ -115,9 +172,9 @@
                 m.parentNode.insertBefore(a, m)
             })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-55773803-1', 'auto');
+            ga('create', 'UA-73126302-1', 'auto');
             ga('send', 'pageview');
-        </script> -->
+        </script>
     </body>
 
 </html>
