--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <!-- <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Secondary Call to Action</a> -->
             </div>
         </header>
-        <main class="h-100">
-            <section id="about">
+        <main class="">
+            <section id="about" class="one-vh">
                 <div class="measure center pvl phm ">
                     <div class="">
                         <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
@@ -124,7 +124,7 @@
                 </div>
             </section>
         </main>
-        <section class="" id="contact">
+        <section class="one-vh" id="contact">
             <div class="measure center tl tc-ns phm">
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title tc">Contact Us:</h1>
                 <hr/>
