update some of the stuff

--- a/index.html
+++ b/index.html
@@ -50,44 +50,46 @@
                 <!-- <h3 class="f5 f4-ns book mbm mtn">Bringing solutions to those that need them, across international boundaries.</h3> -->
                 <br/>
                 <a href="#about" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam hover-link">Learn More</a>
-                <a href="#contact" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Contact Us</a>
+                <!-- <a href="#contact" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Contact Us</a> -->
                 <!-- <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Secondary Call to Action</a> -->
             </div>
         </header>
         <main class="">
-            <section id="about" class="one-vh">
+            <section id="about" class="">
                 <div class="measure center pvl phm ">
-                    <div class="">
-                        <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
-                        <hr/>
-                        <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market intelligence to successful project management.</p>
-                        <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving customer problems.</p>
-                    </div>
-                    <div class="">
-                        <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Sector Expertise:</h1>
-                        <hr/>
-                        <ul>
-                            <li>
-                                Commercial Marine Industry
-                            </li>
-                            <li>
-                                Superyacht Industry (50m +)
-                            </li>
-                            <li>
-                                Glass and Glazing Technologies
-                            </li>
-                            <li>
-                                Custom Metal Manufacturing
-                            </li>
-                            <li>
-                                Advanced Composites Technology
-                            </li>
-                        </ul>
+                    <div class="h-at">
+                        <div class="">
+                            <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
+                            <hr/>
+                            <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market intelligence to successful project management.</p>
+                            <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving customer problems.</p>
+                        </div>
+                        <div class="">
+                            <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Sector Expertise:</h1>
+                            <hr/>
+                            <ul>
+                                <li>
+                                    Commercial Marine Industry
+                                </li>
+                                <li>
+                                    Superyacht Industry (50m +)
+                                </li>
+                                <li>
+                                    Glass and Glazing Technologies
+                                </li>
+                                <li>
+                                    Custom Metal Manufacturing
+                                </li>
+                                <li>
+                                    Advanced Composites Technology
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <hr/>
-                    <div class="fl w-100 mvxxl">
+                    <div class="fl w-100 mvxxl h-at">
                         <div class="step tc">
-                            <span class="mega">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
+                            <span class="mega">1</span><h1 class="f3 tracked ttu">Uncover and Identify Target Audience</h1>
                             <p>
                                 KYMA International excels in seeking and identifying new and growing markets as well as identifying key competitors within existing markets.
                             </p>
@@ -96,7 +98,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="mega">2</span><h1 class="f1 tracked ttu">Pursue and Connect with Target Market</h1>
+                            <span class="mega">2</span><h1 class="f3 tracked ttu">Pursue and Connect with Target Market</h1>
                             <p>
                                 Specialising in connecting with and reaching out to potential customers as well as building lasting relationships with the complete supply chain
                             </p>
@@ -105,7 +107,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="mega">3</span><h1 class="f1 tracked ttu">Process and Solve Customer Needs</h1>
+                            <span class="mega">3</span><h1 class="f3 tracked ttu">Process and Solve Customer Needs</h1>
                             <p>
                                 Identify needs and wants of customers to develop complete products, manufacturing, and management processes that deliver value to customers.
                             </p>
@@ -114,7 +116,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc ">
-                            <span class="mega">4</span><h1 class="f1 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
+                            <span class="mega">4</span><h1 class="f3 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
                             <p>
                                 Collect customer feedback and iterate with product teams to perfect the experience for current and future customers.
                             </p>
@@ -124,10 +126,10 @@
                 </div>
             </section>
         </main>
-        <section class="one-vh" id="contact">
+        <section class="h-at" id="contact">
             <div class="measure center tl tc-ns phm">
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title tc">Contact Us:</h1>
-                <hr/>
+                <hr />
                 <h3 class="f4 f2-ns semibold ttu tracked lh-title">Neil Hamlin</h3>
                 <div class="contact-details tal">
                     <i class="fa fa-phone f2"></i> <a class="contact-personal-tel link" href="tel:+14254180628">Call Me</a>
