--- a/thanks.html
+++ b/thanks.html
@@ -49,40 +49,42 @@
                 <h2 class="f4 f3-ns book mbm mtn">International Business Development</h2>
                 <br/>
                 <a href="#about" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam hover-link">Learn More</a>
-                <a href="#contact" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Contact Us</a>
+                <!-- <a href="#contact" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Contact Us</a> -->
             </div>
         </header>
         <main class="">
-            <section id="about" class="one-vh">
+            <section id="about" class="">
                 <div class="measure center pvl phm">
-                    <div class="">
-                        <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
-                        <hr/>
-                        <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market intelligence to successful project management.</p>
-                        <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving customer problems.</p>
+                    <div class="h-100">
+                        <div class="">
+                            <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
+                            <hr/>
+                            <p class="measure lh-copy">KYMA International specializes in the entire business development and marketing process, from market intelligence to successful project management.</p>
+                            <p class="measure lh-copy">KYMA International covers all the major steps from understanding new markets, identifying key product differentiation strategies, to solving customer problems.</p>
+                        </div>
+                        <div class="">
+                            <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Sector Expertise:</h1>
+                            <hr/>
+                            <ul>
+                                <li>
+                                    Commercial Marine Industry
+                                </li>
+                                <li>
+                                    Superyacht Industry (50m +)
+                                </li>
+                                <li>
+                                    Glass and Glazing Technologies
+                                </li>
+                                <li>
+                                    Custom Metal Manufacturing
+                                </li>
+                                <li>
+                                    Advanced Composites Technology
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="">
-                        <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Sector Expertise:</h1>
-                        <hr/>
-                        <ul>
-                            <li>
-                                Commercial Marine Industry
-                            </li>
-                            <li>
-                                Superyacht Industry (50m +)
-                            </li>
-                            <li>
-                                Glass and Glazing Technologies
-                            </li>
-                            <li>
-                                Custom Metal Manufacturing
-                            </li>
-                            <li>
-                                Advanced Composites Technology
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="fl w-100 mvxxl">
+                    <div class="fl w-100 mvxxl h-100">
                         <div class="step tc">
                             <span class="mega">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
                             <p>
@@ -121,7 +123,7 @@
                 </div>
             </section>
         </main>
-        <section class="one-vh" id="contact">
+        <section class="h-100" id="contact">
             <div class="measure center tl tc-ns phm">
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title">Contact Me:</h1>
                 <hr/>
